# blocky-writer

./: .containerignore  .editorconfig  .gitignore  0-AI-MANIFEST.a2ml  Containerfile  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  bsconfig.json  deno.json  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  package.json  rescript.json  setup.sh  stapeln.toml  webpack.config.cjs  wokelangiser.toml
.github/workflows/: ci.yml  codeql.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.well-known/: security.txt
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/reports/audit/: audit-2026-04-15-post.md  audit-2026-04-15-pre.md
public/: manifest.json  popup.html
rust/pdftool_core/: Cargo.toml  README.md
rust/pdftool_core/src/: lib.rs
scripts/: build-wasm.sh
selur-compose/: compose.toml
src/: background.res  content.res  popup.res
src/components/: Block.res  FormFiller.res
src/core/: PdfTool.res  ProvenMount.res  SafeDOM.res  SafeDOMABI.res  SafeDOMFFI.res  Storage.res
