[package]
name = "pdftool_core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "WASM core for block detection and PDF filling"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
